# MatthAIs

./: README.md
MatthAIs/: CMakeLists.txt  Patterns.txt
MatthAIs/src/: layer.h  linearinputlayer.h  linearlayer.h  linearoutputlayer.h  main.cpp  network.h
MatthAIs/src/ui/: widget.cpp  widget.h  widget.ui
